# C-Course-Project

./: CMakeLists.txt  README.md  main.cpp  nr_days.cpp  nr_days.h  sdl_functions.cpp  sdl_functions.h  sdl_window.cpp  sdl_window.h  settingsWindow.cpp  settingsWindow.h  weatherData.cpp  weatherData.h
